# docs/02-design-specs/api-contracts/openapi.yaml
@@ -133,6 +133,25 @@ paths:
                 $ref: "#/components/schemas/QuizQuestionResponse"
         "404":
           $ref: "#/components/responses/NotFound"
+  /users/{userId}:nextErrorQuestion:
+    post:
+      operationId: getNextErrorQuestion
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/QuizQuestionResponse"
+        "404":
+          $ref: "#/components/responses/NotFound"
   /users/{userId}:submitAnswer:
     post:
       operationId: submitAnswer
